# PVZ-Fuzion-ConsolManager

./: .gitignore  README.md  pyproject.toml
app/: pyproject.toml
app/data/: logo.md
app/src/: console.py
app/src/parser/: entry_comparator.py  object.py
app/src/report_builder/: need_trad.py
data/: title.md
src/: console.py
src/interface/: interface.py
src/parser/: entry_comparator.py  object.py  parser.py
src/python_console.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/report_builder/: need_trad.py
